k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: friends-connect
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: friends-connect
