k8s/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: testing-ssl-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: testing-ssl
---
apiVersion: v1
kind: Service
metadata:
  name: friends-connect
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: friends-connect
