k8s/base/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 146.235.192.228.nip.io
    http:
      paths:
      - path: /.test123
        pathType: ImplementationSpecific
        backend:
          service:
            name: friends-connect
            port:
              number: 80
